@@ -1,5 +1,8 @@
 Revision history for Test-Which
 
+0,06
+	More work fixing on Windows
+
 0.05	Wed Dec  3 08:16:44 EST 2025
 	Try again with IPC::Run3 if it's installed
 	Allow timeout to be specified - the default is 5 seconds
